--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "@angular/router": "^17.3.0",
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "grapesjs": "^0.22.4",
+    "grapesjs-blocks-basic": "^1.0.2",
+    "grapesjs-preset-newsletter": "^1.0.2",
+    "grapesjs-preset-webpage": "^1.0.3",
+    "ngx-grapesjs": "^17.0.0",
     "ngx-quill": "^26.0.9",
     "primeng": "^17.18.11",
     "quill": "^2.0.2",
